[gd_scene load_steps=7 format=3 uid="uid://xs0r1byb1prb"]

[ext_resource type="Texture2D" uid="uid://pjmvuxj7cjlu" path="res://Art/PlaceholderArt/GlowLight.png" id="1_p6atk"]
[ext_resource type="Script" path="res://Scripts/ceiling_light.gd" id="2_ylind"]
[ext_resource type="PackedScene" uid="uid://dnfv8l2scy5xo" path="res://Scenes/Utility/blockable_area.tscn" id="3_8yhax"]
[ext_resource type="Texture2D" uid="uid://ci43jde51dx1e" path="res://Art/2D Pixel Dungeon Asset Pack/items and trap_animation/torch/torch_4.png" id="4_04l0u"]
[ext_resource type="PackedScene" uid="uid://dmqxqsilglak" path="res://Scenes/Effects/light_off_sound.tscn" id="5_cmb53"]
[ext_resource type="PackedScene" uid="uid://clc7yhlak1qhe" path="res://Scenes/Effects/light_on_sound.tscn" id="6_c32l3"]

[node name="CeilingLight" type="PointLight2D"]
color = Color(0.980392, 0.713726, 0.341176, 1)
shadow_enabled = true
shadow_filter = 1
texture = ExtResource("1_p6atk")
texture_scale = 1.11111
script = ExtResource("2_ylind")

[node name="LightArea" parent="." instance=ExtResource("3_8yhax")]
ray_range = 50.0
hit_from_inside = true
ray_mask = 26

[node name="Torch4" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.219608)
texture = ExtResource("4_04l0u")

[node name="LightOff" parent="." instance=ExtResource("5_cmb53")]

[node name="LightOn" parent="." instance=ExtResource("6_c32l3")]

[connection signal="target_entered" from="LightArea" to="." method="_on_light_area_target_entered"]
[connection signal="target_exited" from="LightArea" to="." method="_on_light_area_target_exited"]
